# vsrg-client

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh
assets/charts/Noah feat Ai Ohsera - Rebirth the end/: Noah feat. Ai Ohsera - Rebirth the end (Begin) [Denouement].osu
assets/charts/Rahatt - Matusa Bomber/: Rahatt - Matusa Bomber (Ska) [2mnd].osu
include/core/: app.hpp  audio.hpp  debug.hpp  font.hpp  screen.hpp  shader.hpp  textComponent.hpp  utils.hpp
include/core/engine/: audio.hpp  plugin.hpp  screen.hpp  shader.hpp
include/core/screens/: debugScreen.hpp  initScreen.hpp  testScreen.hpp
include/core/ui/: font.hpp  solidComponent.hpp  sprite.hpp  spriteComponent.hpp  textComponent.hpp  texture.hpp  uiComponent.hpp
include/public/: IGamePlugin.hpp  engineContext.hpp
include/rhythm/: conductor.hpp
plugins/: CMakeLists.txt
plugins/mania/: CMakeLists.txt
plugins/mania/include/rhythm/: holdNote.hpp  note.hpp  playfield.hpp  strum.hpp
plugins/mania/include/rhythm/charts/: chart.hpp  chartData.hpp  mania.hpp
plugins/mania/include/rhythm/math/: scroll.hpp
plugins/mania/src/: main.cpp
plugins/mania/src/rhythm/: holdNote.cpp  note.cpp  playfield.cpp  strum.cpp
plugins/mania/src/rhythm/charts/: chart.cpp  mania.cpp
plugins/mania/src/rhythm/math/: scroll.cpp
src/: app.cpp  main.cpp
src/core/: app.cpp  audio.cpp  debug.cpp  font.cpp  screen.cpp  shader.cpp  textComponent.cpp  utils.cpp
src/core/engine/: audio.cpp  plugin.cpp  screen.cpp  shader.cpp
src/core/screens/: debugScreen.cpp  initScreen.cpp  testScreen.cpp
src/core/ui/: font.cpp  solidComponent.cpp  sprite.cpp  spriteComponent.cpp  textComponent.cpp  texture.cpp
src/public/: engineContext.cpp
src/rhythm/: conductor.cpp
